--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev":"nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "nodemon index.js",
     "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
   },
@@ -24,5 +24,6 @@
     "mongoose": "^8.19.1",
     "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
-  }
+  },
+  "devDependencies": {}
 }
