--- a/Backend/Frontend/package.json
+++ b/Backend/Frontend/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "axios": "^1.12.2",
         "backend": "file:..",
+        "glob": "^11.0.3",
         "js-cookie": "^3.0.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -19,6 +20,7 @@
         "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^6.30.1",
+        "rimraf": "^6.0.1",
         "socket.io-client": "^4.8.1",
         "zustand": "^4.5.7"
     },
