--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "nodemon index.js",
-    "build": "npm ci && npm ci --prefix frontend && npm run build --prefix frontend"
-
+    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "keywords": [
     "MERN"
