--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "nodemon index.js",
-     "build": "NPM_CONFIG_PRODUCTION=false npm ci && npm ci --prefix frontend && npm run build --prefix frontend"
+     "build": "NPM_CONFIG_PRODUCTION=false npm install && npm install --prefix frontend && npm run build --prefix frontend"
+
 
   },
   "keywords": [
